--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@fontsource/fira-code": "^5.0.18",
+    "@tsparticles/react": "^3.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tsparticles": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
