--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postbuild": "react-snap"
   },
   "reactSnap": {
+    "source": "dist",
     "puppeteerArgs": [
       "--no-sandbox",
       "--disable-setuid-sandbox"
