--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fontsource/fira-code": "^5.0.18",
     "@tsparticles/react": "^3.0.0",
+    "@vercel/analytics": "^1.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
