--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": ".",
   "dependencies": {
     "@fontsource/fira-code": "^5.0.18",
+    "@fontsource/noto-sans-jp": "^5.0.19",
     "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.11",
