--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/react": "^3.0.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.11",
+    "axios": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
