--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-scroll-parallax": "^3.4.5",
     "tsparticles": "^3.4.0"
   },
   "devDependencies": {
