--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll-parallax": "^3.4.5",
+    "react-tilt": "^1.0.2",
     "tsparticles": "^3.4.0"
   },
   "devDependencies": {
